--- a/style.css
+++ b/style.css
@@ -1,30 +1,28 @@
 *{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 body{
-    margin: 0;
     background: cadetblue;
 }
 
 .navbar{
-    padding: auto;
     width: 100%;
-    height: auto;
     background-color: aquamarine;
-    overflow: hidden;
     
 }
 
-/* .nav-items{
+.nav-items{
     list-style: none;
-} */
+}
 .nav-item{
     text-decoration: none;
-    display:inline;
-    float: left;
-    margin: 10px;
+    /* display:inline; */
+    /* float: left; */
+    /* margin: 10px; */
 }
 
-main{
+/* main{
     margin: 10px;
-}
+} */
