--- a/style.css
+++ b/style.css
@@ -3,26 +3,135 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
     background: cadetblue;
+    font-family: "Roboto", sans-serif;
 }
 
 .navbar{
+    display: flex;
     width: 100%;
     background-color: aquamarine;
+    height: 50px;
+    justify-content: space-between;
+}
+
+.pagename{
+    /* background: yellowgreen; */
+    width: 50%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 15px;
+}
+
+.pagename>a{
+    text-decoration: none;
+    color:black;
+    font-size: 20px;
+}
+
+.items{
+    width: 50%;
+    /* background: yellow; */
+    display: flex;
+    justify-content:flex-end;
+    align-items: center;
+}
+
+.items.nav-items{
+    list-style: none;
+    text-align: center;
+}
+
+.nav-item{
+    display:inline;
+    font-size: 17px;
+    margin-right: 15px;
     
 }
 
-.nav-items{
-    list-style: none;
-}
-.nav-item{
+.nav-item>a{
     text-decoration: none;
-    /* display:inline; */
-    /* float: left; */
-    /* margin: 10px; */
+    color: black;
 }
 
-/* main{
-    margin: 10px;
+.nav-item>button{
+    color:white;
+    background: black;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+main>h1{
+    margin: 30px 0;
+}
+
+form{
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 2px 2px 20px 2px black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    width: auto;
+    padding: 40px;
+    
+}
+
+label{
+    font-size: 20px;
+    margin-bottom: 10px;
+    align-self: self-start;
+}
+
+#username, #password{
+    width: 250px;
+    height: 35px;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.submit{
+    width: 150px;
+    font-size: 17px;
+    padding: 5px;
+    align-items: end;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0 0 10px;
+}
+
+.links{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.links>a{
+    text-decoration: none;
+    color: black;
+}
+
+p{
+    margin: 0 25px;
+}
+
+
+/* footer{
+    background-color: black;
+    color: white;
 } */
