--- a/style.css
+++ b/style.css
@@ -68,6 +68,12 @@ body{
     border-radius: 13px;
     box-shadow: 2px 2px 10px;
     padding: 10px;
+}
+
+.nav-item>button>a{
+    text-decoration: none;
+    color: black;
+    font-size: 15px;
     font-size: 15px;
 }
 
@@ -83,7 +89,6 @@ main{
 }
 
 .login-form, .signup-form{
-    border: 1px solid black;
     border-radius: 5px;
     box-shadow: 2px 2px 20px 2px black;
     display: flex;
@@ -131,7 +136,6 @@ label{
 }
 
 .forgotpass{
-    /* text-decoration: none; */
     color: rgb(36, 8, 43);
     align-self:self-start;
     font-size: 15px;
@@ -149,7 +153,7 @@ label{
     font-size: 15px;
 }
 
-p{
+.ask-signup{
     font-size: 15px;
     margin-top: 20px;
 }
