--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
 }
 
 /* Logo Text Letters */
-span{
+.pagename>a>span{
     color: #64609A;
 }
 
@@ -154,8 +154,17 @@ main{
     padding: 40px;
 }
 
+/* Error appears next to input fields in the form */
+.error{
+    margin-top: 20px;
+    /* margin-bottom: 20px; */
+    color: #cc0000;
+    text-shadow: 0 0 10px;
+    align-self: self-start;
+}
+
 /* Error appears at top in login form when user not found */
-.login-error{
+.login-error, .signup-error{
     /* margin-top: 20px; */
     margin-bottom: 20px;
     color: #cc0000;
@@ -164,15 +173,6 @@ main{
     box-shadow: 0 0 10px;
     border-radius: 5px;
     padding: 20px;
-}
-
-/* Error appears next to username and password when they are empty */
-.username-error, .password-error{
-    margin-top: 20px;
-    /* margin-bottom: 20px; */
-    color: #cc0000;
-    text-shadow: 0 0 10px;
-    align-self: self-start;
 }
 
 /* Labels of the form */
