--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ main{
     font-size: 18px;
     line-height: 30px;
     width: 70%;
-    height: 400px;
+    height: auto;
     padding: 40px;
 }
 
