--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ main{
 .login-heading, .about-heading, .signup-heading{
     margin: 30px 0;
     font-weight: bold;
+    text-align: center;
 }
 
 /* form container */
@@ -271,4 +272,11 @@ footer{
 footer>p>a{
     line-height: 20px;
     color: #bfbfbf;
+}
+
+@media only screen and (max-width: 350px){
+    
+    .login-form, .signup-form, .forgotpass-form{
+        padding: 10px;
+    }
 }
